--- a/app/src/main/res/layout/fragment_decision.xml
+++ b/app/src/main/res/layout/fragment_decision.xml
@@ -9,35 +9,33 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="@color/background">
+        android:background="@color/fragment_bg">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="@dimen/head_margin_vertical"
             android:text="@string/decision"
-            android:textSize="45sp" />
+            android:textSize="@dimen/head_text" />
 
         <TextView
             android:id="@+id/discriminant_decision1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:layout_marginHorizontal="50dp"
+            android:layout_marginTop="@dimen/detail_disc_margin_top"
             android:gravity="center"
-            android:textSize="30sp"
+            android:textSize="@dimen/detail_disc_text"
             android:text="D = b * b - 4ac" />
 
         <TextView
             android:id="@+id/discriminant_decision2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:layout_marginHorizontal="50dp"
+            android:layout_marginTop="@dimen/detail_disc_margin_top"
             android:gravity="center"
-            android:textSize="30sp"
-            android:text="D = b * b - 4ac" />
+            android:textSize="@dimen/detail_disc_text"
+            android:text="D = x" />
 
     </LinearLayout>
 </FrameLayout>
