--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.Quadratic_equation_test" parent="Theme.Material3.DayNight.NoActionBar">
-        <item name="colorPrimary">@color/actionbar</item>
+        <item name="colorPrimary">@color/actionbar_bg</item>
     </style>
 
     <style name="Theme.Quadratic_equation_test" parent="Base.Theme.Quadratic_equation_test" />
