--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="fragment_bg">#9effe8</color>
     <color name="actionbar_bg">#1ed4a3</color>
     <color name="button_bg">#D4CFD4</color>
+    <color name="discriminant_error">#ff3333</color>
 </resources>
