--- a/app/src/main/res/layout/fragment_calculator.xml
+++ b/app/src/main/res/layout/fragment_calculator.xml
@@ -13,13 +13,14 @@
         android:background="@color/fragment_bg">
 
         <TextView
-            android:id="@+id/equation_head"
+            android:id="@+id/head_equation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="@dimen/head_margin_vertical"
             android:gravity="center"
             android:text="@string/equation_head"
-            android:textSize="@dimen/head_text" />
+            android:textSize="@dimen/head_text"
+            android:textColor="@color/text_black" />
 
         <EditText
             android:id="@+id/variable_a"
@@ -28,7 +29,7 @@
             android:layout_marginHorizontal="@dimen/var_margin_horizontal"
             android:ems="10"
             android:hint="@string/variable_a"
-            android:inputType="number"
+            android:inputType="numberDecimal"
             android:minHeight="@dimen/var_min_height" />
 
         <EditText
@@ -39,7 +40,7 @@
             android:layout_marginTop="@dimen/var_margin_top"
             android:ems="10"
             android:hint="@string/variable_b"
-            android:inputType="number"
+            android:inputType="numberDecimal"
             android:minHeight="@dimen/var_min_height" />
 
         <EditText
@@ -50,17 +51,8 @@
             android:layout_marginTop="@dimen/var_margin_top"
             android:ems="10"
             android:hint="@string/variable_c"
-            android:inputType="number"
+            android:inputType="numberDecimal"
             android:minHeight="@dimen/var_min_height" />
-
-        <TextView
-            android:id="@+id/discriminant_error"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:textSize="20sp"
-            android:textColor="@color/discriminant_error"
-            android:gravity="center" />
 
         <Button
             android:id="@+id/btn_calculate"
@@ -79,7 +71,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/disc_answer_margin_top"
             android:textSize="@dimen/disc_answer_text"
-            android:gravity="center" />
+            android:gravity="center"
+            android:visibility="gone" />
 
         <Button
             android:id="@+id/btn_detailed"
@@ -89,8 +82,8 @@
             android:layout_marginTop="@dimen/detail_button_margin_top"
             android:backgroundTint="@color/button_bg"
             android:drawableBottom="@android:drawable/arrow_down_float"
-            android:text="@string/detailed" />
-
+            android:text="@string/detailed"
+            android:visibility="gone" />
 
     </LinearLayout>
 </FrameLayout>
