--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -21,7 +21,7 @@
             android:textSize="@dimen/head_text" />
 
         <TextView
-            android:id="@+id/discriminant_decision1"
+            android:id="@+id/discriminant_decision"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -29,7 +29,7 @@
             android:text="@string/formula" />
 
         <TextView
-            android:id="@+id/discriminant_decision2"
+            android:id="@+id/disc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/detail_disc_margin_top"
